fixing z-index issue with layer selector

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -740,7 +740,7 @@ div.right {
   top: 20px;
   right: 23px;
   width: 224px;
-  z-index: 100;
+  z-index: 10;
 }
 /* line 219, ../../css_src/partials/_map.scss */
 .map_container .layers a.view {
